[build-system]
requires = ["poetry>=1.6.1"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "netmiko"
version = "4.4.0"
description = "Multi-vendor library to simplify legacy CLI connections to network devices"
authors = ["Kirk Byers <ktbyers@twb-tech.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ktbyers/netmiko"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
setuptools = ">=65.0.0"
paramiko = ">=2.9.5"
scp = ">=0.13.6"
pyyaml = ">=5.3"
textfsm = ">=1.1.3"
ntc-templates = ">=3.1.0"
pyserial = ">=3.3"
cffi = ">=1.17.0rc1"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
mypy = "1.10.1"
mypy-extensions = "1.0.0"
PyYAML = "6.0.1"
pytest = "8.2.2"
# Issue with build failure on pyflakes 2.5.0
pyflakes = "3.2.0"
pylama = "8.4.1"
twine = "5.1.1"
# docutils/poetry release issue on 0.21.1
docutils = [
    {version = "<=0.20", python = "3.8.*"},
    {version = ">=0.21.2", python = ">=3.9"}
]
pysnmp = "6.2.4"
pdoc3 = "0.10.0"
types-paramiko = "3.4.0.20240423"
types-PyYAML = "6.0.12.20240311"

[tool.poetry.group.parsers]
optional = true

[tool.poetry.group.parsers.dependencies]
pyats = ">=24.5"
genie = ">=24.5"
ttp = ">=0.9.5"

[tool.poetry.scripts]
"netmiko-grep" = "netmiko.cli_tools.netmiko_grep:main_ep"
"netmiko-show" = "netmiko.cli_tools.netmiko_show:main_ep"
"netmiko-cfg" = "netmiko.cli_tools.netmiko_cfg:main_ep"

[tool.black]
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | netmiko/_telnetlib
)/
'''
