[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[pylama]
linters = mccabe,pep8,pyflakes
ignore = D203,C901
skip = build/*,.tox/*,netmiko/_textfsm/*,examples/use_cases/*

[pylama:pep8]
max_line_length = 100

[tool:pytest]
addopts = -rs

[mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
python_version = 3.6
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_redundant_casts = True

[mypy-netmiko._textfsm._terminal]
ignore_errors = True

[mypy-netmiko._textfsm._texttable]
ignore_errors = True

[mypy-netmiko._textfsm._clitable]
ignore_errors = True
