[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE

[pylama]
linters = mccabe,pycodestyle,pyflakes
ignore = D203,C901
skip = build/*,.tox/*,examples/use_cases/*,.venv/*,netmiko/_telnetlib/*

[pylama:pycodestyle]
max_line_length = 100

[tool:pytest]
addopts = -rs

[mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
python_version = 3.9
exclude = (netmiko/_telnetlib)
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_redundant_casts = True

[mypy-netmiko.base_connection]
# CI-CD (GitHub actions was giving me errors on the two type: ignore lines
# in base_connection.py associated with Tenacity.
warn_unused_ignores = False

[mypy-netmiko.cli_tools.netmiko_grep]
ignore_errors = True

[mypy-netmiko.cli_tools.netmiko_cfg]
ignore_errors = True

[mypy-netmiko.cli_tools.netmiko_show]
ignore_errors = True

[mypy-netmiko.cli_tools.helpers]
ignore_errors = True

[mypy-netmiko.cli_tools.outputters]
ignore_errors = True

[mypy-netmiko.cli_tools.argument_handling]
ignore_errors = True

[mypy-netmiko.cli_tools.netmiko_encrypt]
ignore_errors = True

[mypy-netmiko.cli_tools.netmiko_bulk_encrypt]
ignore_errors = True
